--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@default-js/defaultjs-html-typeahead",
 	"buildname": "defaultjs-html-typeahead",
-	"version": "1.0.0",
+	"version": "1.3.0",
 	"description": "Html web component for typeahead functionality!",
 	"main": "./index.js",
 	"scripts": {
@@ -28,7 +28,7 @@
 		"karma-webpack": "^4.0.2",
 		"puppeteer": "^2.1.1",
 		"replace-in-file-webpack-plugin": "^1.0.6",
-		"webpack": "^4.46.0",
+		"webpack": "^5.39.0",
 		"webpack-cli": "^3.3.12",
 		"webpack-dev-server": "^3.11.2",
 		"webpack-glob-entry": "^2.1.1",
@@ -47,6 +47,7 @@
 		"@default-js/defaultjs-expression-language": "^1.0.0-beta.14",
 		"@default-js/defaultjs-extdom": "^1.0.2",
 		"@default-js/defaultjs-html-components": "^2.0.0",
+		"@default-js/defaultjs-html-request": "^1.0.0",
 		"@default-js/defaultjs-template-language": "^1.0.4"
 	},
 	"directories": {
