--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
 	"description": "Html web component for typeahead functionality!",
 	"main": "./index.js",
 	"scripts": {
-		"build:only": "webpack --config webpack.prod.js && webpack --config webpack.dev.js",
-		"build": "webpack --config webpack.prod.js && webpack --config webpack.dev.js && npm test",
+		"build-only": "webpack --config webpack.prod.js && webpack --config webpack.dev.js",
+		"build": "npm test && webpack --config webpack.prod.js && webpack --config webpack.dev.js",
 		"//dev:live": "webpack-dev-server --open --config webpack.dev-server.js && npm run test:live",
 		"dev:live": "webpack-dev-server --open --config webpack.dev-server.js",
 		"test:live": "karma start karma.live.js",
@@ -20,19 +20,18 @@
 		"karma": "^6.3.4",
 		"karma-chrome-launcher": "^3.1.0",
 		"karma-coverage": "^2.0.3",
-		"karma-firefox-launcher": "^1.3.0",
+		"karma-firefox-launcher": "^2.1.1",
 		"karma-html2js-preprocessor": "^1.1.0",
 		"karma-jasmine": "^4.0.1",
 		"karma-safari-launcher": "^1.0.0",
 		"karma-sourcemap-loader": "^0.3.8",
 		"karma-webpack": "^5.0.0",
-		"puppeteer": "^2.1.1",
+		"puppeteer": "^10.0.0",
 		"replace-in-file-webpack-plugin": "^1.0.6",
-		"webpack": "^5.39.0",
+		"webpack": "^5.40.0",
 		"webpack-cli": "^4.7.2",
-		"webpack-dev-server": "^3.11.2",
-		"webpack-glob-entry": "^2.1.1",
-		"webpack-merge": "^4.2.2"
+		"webpack-dev-server": "^4.2.1",
+		"webpack-merge": "^5.8.0"
 	},
 	"repository": {
 		"type": "git",
