--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@default-js/defaultjs-html-typeahead",
 	"buildname": "defaultjs-html-typeahead",
-	"version": "1.3.1",
+	"version": "1.3.2",
 	"description": "Html web component for typeahead functionality!",
 	"main": "./index.js",
 	"scripts": {
@@ -42,12 +42,12 @@
 	},
 	"homepage": "https://github.com/default-js/defaultjs-html-typeahead#readme",
 	"dependencies": {
-		"@default-js/defaultjs-common-utils": "^0.14.1",
-		"@default-js/defaultjs-expression-language": "^1.0.0-beta.14",
-		"@default-js/defaultjs-extdom": "^1.0.2",
-		"@default-js/defaultjs-html-components": "^2.0.0",
-		"@default-js/defaultjs-html-request": "^1.0.0",
-		"@default-js/defaultjs-template-language": "^1.1.4"
+		"@default-js/defaultjs-common-utils": "latest",
+		"@default-js/defaultjs-expression-language": "latest",
+		"@default-js/defaultjs-extdom": "latest",
+		"@default-js/defaultjs-html-components": "latest",
+		"@default-js/defaultjs-html-request": "latest",
+		"@default-js/defaultjs-template-language": "latest"
 	},
 	"directories": {
 		"test": "test"
